# jsj

./: .gitignore  README.md  Updater.py  database.py  inline_bot.py  kernel.py  loader.py  main.py  meta_lib.py  pyproject.toml  repos.json  tunnel.py  utils.py  webapp.py
.github/workflows/: ci.yml
forelka/: __init__.py  __main__.py  app.py  cli.py  config.py  i18n.py
forelka/core/: __init__.py  database.py  kernel.py  loader.py  meta.py  utils.py
forelka/inline/: __init__.py  bot.py
forelka/locales/: ru.json
forelka/modules/: __init__.py  accounts.py  aliases.py  bot_welcome.py  calculator.py  config.py  feedback.py  info.py  lang.py  logs.py  ping.py  prefix.py  restart.py  updater.py
forelka/web/: __init__.py  app.py
locales/: en.json
modules/: backup.py  bot_welcome.py  calculator.py  changelog.py  config.py  feedback.py  help.py  logs.py  owner.py  ping.py  prefix.py  restart.py  start_menu.py  terminal.py  test.py
tests/: test_config.py  test_i18n.py  test_package_layout.py
