[project]
name = "forelka"
version = "2.0.0"
description = "Forelka — Telethon-based Telegram userbot with inline control, hot-reloadable modules and web login."
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34",
    "pyrogram>=2.0",
    "tgcrypto>=1.2.5",
    "flask>=3.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools]
packages = ["forelka"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["loaded_modules", "accounts", "assets"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# The legacy codebase has a lot of bare `except:` clauses and unused imports
# we haven't migrated yet — keep the ignore list small and explicit.
ignore = [
    "E501",   # long lines (Telegram HTML strings)
    "E701",   # multi-statement `if foo: return bar`
    "E722",   # bare except (to be tightened per-file)
    "B904",   # raise ... from err
    "UP007",  # keep Optional[X] syntax
    "UP045",  # keep Optional[X] syntax in annotations
]

[tool.ruff.lint.per-file-ignores]
"modules/*" = ["E402", "F401", "F403", "F405"]
"cli.py" = ["E402"]
"main.py" = ["E402", "F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
