[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forelka"
version = "2.0.0"
description = "Forelka — Telethon-based Telegram userbot with inline control, hot-reloadable modules and web login."
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34",
    "pyrogram>=2.0",
    "tgcrypto>=1.2.5",
    "flask>=3.0",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "requests>=2.31",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
forelka = "forelka.app:main"
forelka-cli = "forelka.cli:main"

[tool.setuptools.packages.find]
include = ["forelka*"]

[tool.setuptools.package-data]
"forelka.locales" = ["*.json"]
"forelka.assets" = ["*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["loaded_modules", "accounts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = [
    "E501",   # long lines (Telegram HTML strings)
    "E701",   # multi-statement `if foo: return bar`
    "E722",   # bare except (legacy code)
    "B904",   # raise ... from err
    "UP007",  # keep Optional[X] syntax
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
"forelka/modules/*" = ["E402", "F401", "F403", "F405"]
"forelka/cli.py" = ["E402"]
"forelka/app.py" = ["E402", "F401"]
# loader.py uses a terse `stmt; stmt` style throughout; leave alone until it's rewritten.
"forelka/core/loader.py" = ["E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
